--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,7 @@ permissions:
 
 env:
   #owr_branch: "openwrt-24.10"
-  owr_branch: "openwrt-21.02-SNAPSHOT"
+  owr_branch: "openwrt-21.02"
   #owr_commit: "ea17e958b9"
   owr_commit: "r15812+912-46b6ee7ffc"
   gl_version: "4.7.4"
